--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "better-scroll": "^2.0.0-beta.10",
     "immutable": "^4.0.0-rc.12",
     "prop-types": "^15.7.2",
